# ska-pst-stat

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CODEOWNERS  Makefile  README.md  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json
.gitlab/ci/: cpp.gitlab-ci.yml  overrides.gitlab-ci.yml
cmake/: FindSkaPstCommon.cmake  FindSkaPstLmc.cmake  FindSkaPstSmrb.cmake  HelloWorldConfig.cmake.in  SkaPstStatConfig.cmake.in
dependencies/: apt.txt
docs/: Doxyfile  requirements.txt
docs/src/: conf.py  index.rst
docs/src/apps/: index.rst
docs/src/architecture/: application_manager_seq.puml  class_diagram.puml  file_proc_seq.puml  index.rst  stats_processor_seq.puml
docs/src/python/: index.rst
images/ska-pst-stat/: Dockerfile
notebooks/: example_api_useage.ipynb
python/src/ska_pst_stat/: __init__.py  stats.py
python/src/ska_pst_stat/hdf5/: __init__.py  consts.py  model.py
python/src/ska_pst_stat/utility/: __init__.py  hdf5_file_generator.py
python/tests/: __init__.py  conftest.py  pytest.ini
python/tests/unit/: test_key_mapping.py  test_loading_of_file.py
src/apps/: CMakeLists.txt  hello_world.cc  ska_pst_stat_core.cpp  ska_pst_stat_file_proc.cpp  ska_pst_stat_info.cpp
src/examples/helloworld-user/: CMakeLists.txt  main.cpp
src/ska/helloworld/: CMakeLists.txt  config.h.in  hello.cc  hello.h  wave.cc  wave.h  wave_impl.h
src/ska/helloworld/tests/: CMakeLists.txt  twave.cc
src/ska/pst/stat/: CMakeLists.txt  FileProcessor.h  FileReader.h  ScalarStatPublisher.h  StatApplicationManager.h  StatComputer.h  StatFilenameConstructor.h  StatHd5FileWriter.h  StatHdf5FileWriter.h  StatProcessor.h  StatPublisher.h  StatStorage.h  config.h.in  finite.h  version.h
src/ska/pst/stat/lmc/: CMakeLists.txt  StatLmcServiceHandler.h
src/ska/pst/stat/lmc/src/: StatLmcServiceHandler.cpp
src/ska/pst/stat/lmc/tests/: CMakeLists.txt  StatLmcServiceHandlerTest.h  StatLmcServiceIntegrationTest.h
src/ska/pst/stat/lmc/tests/src/: StatLmcServiceHandlerTest.cpp  StatLmcServiceIntegrationTest.cpp
src/ska/pst/stat/src/: FileProcessor.cpp  FileReader.cpp  ScalarStatPublisher.cpp  StatApplicationManager.cpp  StatComputer.cpp  StatFilenameConstructor.cpp  StatHdf5FileWriter.cpp  StatProcessor.cpp  StatPublisher.cpp  StatStorage.cpp  version.cpp
src/ska/pst/stat/tests/: CMakeLists.txt  FileProcessorTest.h  ScalarStatPublisherTest.h  StatApplicationManagerTest.h  StatComputerTest.h  StatFilenameConstructorTest.h  StatHdf5FileWriterTest.h  StatProcessorTest.h  StatStorageTest.h  TestDataLayout.h
src/ska/pst/stat/tests/data/: 16bit_data_header.txt  16bit_weights_header.txt  8bit_data_header.txt  8bit_weights_header.txt  beam_config.txt  config.txt  data_config.txt  data_header_LowAA0.5.txt  scan_config.txt  start_scan_config.txt  stat_computer_1chan_32nsamp_config.txt  stat_computer_2chan_4nsamp_config.txt  stat_computer_4chan_8nsamp_config.txt  stat_computer_4chan_8nsamp_masked_config.txt  stat_computer_config.txt  weights_config.txt  weights_header_LowAA0.5.txt
src/ska/pst/stat/tests/src/: FileProcessorTest.cpp  ScalarStatPublisherTest.cpp  StatApplicationManagerTest.cpp  StatComputerTest.cpp  StatFilenameConstructorTest.cpp  StatHdf5FileWriterTest.cpp  StatProcessorTest.cpp  StatStorageTest.cpp
src/ska/pst/stat/testutils/: CMakeLists.txt  DataBlockTestHelper.h  GtestMain.h
src/ska/pst/stat/testutils/src/: DataBlockTestHelper.cpp  GtestMain.cpp
tests/lint/: .clang-tidy-to-junit.py  .cppcheck-googletest.cfg  .cppcheck-suppressions.cfg
tests/utils/: plot_stat_file.py
