[tool.poetry]
name = "ska-pst-stat"
version = "0.3.10"
description = "A Python API to allow reading of HDF5 files produced by STAT.CORE"
authors = ["Team PST"]
license = "BSD-3-Clause"
packages = [
  {include = "ska_pst_stat", from="python/src"}
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2"
h5py = "^3.10.0"
nptyping = "^2.5.0"
numpy = "1.23.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.4"
black = "^22.1.0"
coverage = "^6.3.2"
docformatter = "1.7.3"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-docstrings = "^1.6.0"
flake8-formatter-junit-xml = "^0.0.6"
flake8-rst-docstrings = "^0.3.0"
isort = "^5.9.1"
mock = "^4.0.0"
mypy = "^1.4.1"
pylint = "^2.8.3"
pylint-junit = "^0.3.2"
pytest = "^7.1.2"
pytest-bdd = "^5.0.0"
pytest-cov = "^3.0.0"
pytest-forked = "^1.3.0"
pytest-json-report = "^1.4.0"
pytest-metadata = "^1.11.0"
pytest-mock = "^3.6.1"
pytest-pycodestyle = "^2.2.0"
pytest-pydocstyle = "^2.2.0"
pytest-pylint = "^0.19.0"
pytest-runner = "^6.0.0"
jupyterlab = "^4.0.7"
matplotlib = "^3.8.0"
nbqa = "^1.7.0"
pandas-stubs = "*"


[tool.poetry.group.docs.dependencies]
breathe = "^4.35.0"
sphinx = "<5"
sphinx-rtd-theme = "^1.3.0"
recommonmark = "^0.7.1"
exhale = "^0.3.6"
graphviz = "^0.20.1"
sphinxcontrib-plantuml = "^0.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
